compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__imports__unqualified_using_opaque_constructo.snap
---
source: compiler-core/src/type_/tests/imports.rs
expression: "import one.{Two}\n\npub fn main() {\n  Two\n}"
---
error: Unknown module field
  ┌─ /src/one/two.gleam:1:13
  │
1 │ import one.{Two}
  │             ^^^ Did you mean `type Two`?

`Two` is only a type, it cannot be imported as a value.
