compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__imports__unqualified_using_opaque_constructor.snap
---
source: compiler-core/src/type_/tests/imports.rs
expression: "import one.{Two}\n\npub fn main() {\n  Two\n}"
---
----- SOURCE CODE
-- one.gleam
pub opaque type Two { Two }

-- main.gleam
import one.{Two}

pub fn main() {
  Two
}

----- ERROR
error: Use of private value
  ┌─ /src/one/two.gleam:1:13
  │
1 │ import one.{Two}
  │             ^^^

`one` does define `Two`, but it is private and cannot be accessed by other
modules.

error: Unknown variable
  ┌─ /src/one/two.gleam:4:3
  │
4 │   Two
  │   ^^^

The custom type variant constructor `Two` is not in scope here.
