compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__imports__unqualified_using_private_function.snap
---
source: compiler-core/src/type_/tests/imports.rs
expression: "import one.{two}\n\npub fn main() {\n  two\n}"
---
----- SOURCE CODE
-- one.gleam
fn two() { 2 }

-- main.gleam
import one.{two}

pub fn main() {
  two
}

----- ERROR
error: Use of private value
  ┌─ /src/one/two.gleam:1:13
  │
1 │ import one.{two}
  │             ^^^

`one` does define `two`, but it is private and cannot be accessed by other
modules.

error: Unknown variable
  ┌─ /src/one/two.gleam:4:3
  │
4 │   two
  │   ^^^

The name `two` is not in scope here.
