compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__imports__using_opaque_constructo.snap
---
source: compiler-core/src/type_/tests/imports.rs
expression: "import one\n\npub fn main() {\n  one.Two\n}"
---
error: Unknown module value
  ┌─ /src/one/two.gleam:4:6
  │
4 │   one.Two
  │      ^^^^ Did you mean `type Two`?

`Two` is only a type, it cannot be imported as a value.
