compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__imports__using_private_constructor.snap
---
source: compiler-core/src/type_/tests/imports.rs
expression: "import one\n\npub fn main() {\n  one.Two\n}"
---
----- SOURCE CODE
-- one.gleam
type Two { Two }

-- main.gleam
import one

pub fn main() {
  one.Two
}

----- ERROR
error: Use of private value
  ┌─ /src/one/two.gleam:4:7
  │
4 │   one.Two
  │       ^^^

`one` does define `Two`, but it is private and cannot be accessed by other
modules.
